crates/nash-codegen/src/optimizer_tests/snapshots/nash_codegen__optimizer_tests__unused_params__failure_middle.snap
---
source: crates/nash-codegen/src/optimizer_tests/unused_params.rs
assertion_line: 37
expression: "crate::harness::pass_snapshot(b.arena, before,\nformat!(\"--- core before\\n{}\\n--- core early\\n{}\\n--- core after ANF\\n{}\\n--- uplc before\\n{}\\n--- uplc after\\n{}\\n--- result\\n{}\\n--- logs\\n{:?}\",\npretty(before), pretty(early), pretty(after), baseline.uplc, candidate.uplc,\ncandidate.result, candidate.logs))"
---
--- unoptimized Core
let helper#8 : int -> int -> int -> int = \p#5 : int p#6 : int p#7 : int -> trace "body" in p#6 in
helper#8 (trace "a" in 42) (trace "b" in error) (trace "c" in 42)
--- unoptimized UPLC
(program 1.1.0
  [(lam helper_8
    [[[helper_8
      (force [[(force (builtin trace)) (con string "a")] (delay (con integer 42))])]
      (force [[(force (builtin trace)) (con string "b")] (delay (error))])]
      (force [[(force (builtin trace)) (con string "c")] (delay (con integer 42))])])
    (lam p_5
      (lam p_6
        (lam p_7 (force [[(force (builtin trace)) (con string "body")] (delay p_6)]))))])
--- optimized Core
let arg#5 : int = trace "a" in 42 in
let arg#6 : int = trace "b" in error in
let arg#7 : int = trace "c" in 42 in
trace "body" in arg#6
--- optimized UPLC
(program 1.1.0
  [(lam builtin_4
    [(lam arg_1
      [(lam arg_2
        [(lam arg_3 (force [[builtin_4 (con string "body")] (delay arg_2)]))
          (force [[builtin_4 (con string "c")] (delay (con integer 42))])])
        (force [[builtin_4 (con string "b")] (delay (error))])])
      (force [[builtin_4 (con string "a")] (delay (con integer 42))])])
    (force (builtin trace))])
--- isolated pass
--- core before
let helper#8 : int -> int -> int -> int = \p#5 : int p#6 : int p#7 : int -> trace "body" in p#6 in
helper#8 (trace "a" in 42) (trace "b" in error) (trace "c" in 42)
--- core early
let helper#8 : int -> int = \p#6 : int -> trace "body" in p#6 in
let arg#1 : int = trace "a" in 42 in
let arg#2 : int = trace "b" in error in
let arg#3 : int = trace "c" in 42 in
helper#8 arg#2
--- core after ANF
let helper#8 : int -> int = \p#6 : int -> trace "body" in p#6 in
let arg#1 : int = trace "a" in 42 in
let arg#2 : int = trace "b" in error in
let arg#3 : int = trace "c" in 42 in
helper#8 arg#2
--- uplc before
(program 1.1.0
  [(lam helper_8
    [[[helper_8
      (force [[(force (builtin trace)) (con string "a")] (delay (con integer 42))])]
      (force [[(force (builtin trace)) (con string "b")] (delay (error))])]
      (force [[(force (builtin trace)) (con string "c")] (delay (con integer 42))])])
    (lam p_5
      (lam p_6
        (lam p_7 (force [[(force (builtin trace)) (con string "body")] (delay p_6)]))))])
--- uplc after
(program 1.1.0
  [(lam helper_8
    [(lam arg_1
      [(lam arg_2
        [(lam arg_3 [helper_8 arg_2])
          (force [[(force (builtin trace)) (con string "c")] (delay (con integer 42))])])
        (force [[(force (builtin trace)) (con string "b")] (delay (error))])])
      (force [[(force (builtin trace)) (con string "a")] (delay (con integer 42))])])
    (lam p_6 (force [[(force (builtin trace)) (con string "body")] (delay p_6)]))])
--- result
error: ExplicitErrorTerm
--- logs
["a", "b"]
