crates/nash-codegen/src/optimizer_tests/snapshots/nash_codegen__optimizer_tests__unused_params__last.snap
---
source: crates/nash-codegen/src/optimizer_tests/unused_params.rs
expression: "crate::harness::pass_snapshot(b.arena, before,\nformat!(\"--- core before\\n{}\\n--- core early\\n{}\\n--- core after ANF\\n{}\\n--- uplc before\\n{}\\n--- uplc after\\n{}\\n--- result\\n{}\\n--- logs\\n{:?}\",\npretty(before), pretty(early), pretty(after), baseline.uplc, candidate.uplc,\ncandidate.result, candidate.logs))"
---
--- unoptimized Core
let helper#12 : int -> int -> int -> int = \x#9 : int y#10 : int z#11 : int -> addInteger x#9 y#10 in
addInteger (helper#12 10 20 30) (helper#12 10 20 30)
--- unoptimized UPLC
(program 1.1.0
  [(lam helper_12
    [[(builtin addInteger)
      [[[helper_12 (con integer 10)] (con integer 20)] (con integer 30)]]
      [[[helper_12 (con integer 10)] (con integer 20)] (con integer 30)]])
    (lam x_9 (lam y_10 (lam z_11 [[(builtin addInteger) x_9] y_10])))])
--- optimized Core
let anf#5 : int = addInteger 10 20 in
let anf#6 : int = addInteger 10 20 in
addInteger anf#5 anf#6
--- optimized UPLC
(program 1.1.0
  [(lam partial_3
    [(lam anf_1
      [(lam anf_2 [[(builtin addInteger) anf_1] anf_2]) [partial_3 (con integer 20)]])
      [partial_3 (con integer 20)]])
    [(builtin addInteger) (con integer 10)]])
--- isolated pass
--- core before
let helper#12 : int -> int -> int -> int = \x#9 : int y#10 : int z#11 : int -> addInteger x#9 y#10 in
addInteger (helper#12 10 20 30) (helper#12 10 20 30)
--- core early
let helper#12 : int -> int -> int = \x#9 : int y#10 : int -> addInteger x#9 y#10 in
addInteger (helper#12 10 20) (helper#12 10 20)
--- core after ANF
let helper#12 : int -> int -> int = \x#9 : int y#10 : int -> addInteger x#9 y#10 in
let anf#1 : int = helper#12 10 20 in
let anf#2 : int = helper#12 10 20 in
addInteger anf#1 anf#2
--- uplc before
(program 1.1.0
  [(lam helper_12
    [[(builtin addInteger)
      [[[helper_12 (con integer 10)] (con integer 20)] (con integer 30)]]
      [[[helper_12 (con integer 10)] (con integer 20)] (con integer 30)]])
    (lam x_9 (lam y_10 (lam z_11 [[(builtin addInteger) x_9] y_10])))])
--- uplc after
(program 1.1.0
  [(lam helper_12
    [(lam anf_1
      [(lam anf_2 [[(builtin addInteger) anf_1] anf_2])
        [[helper_12 (con integer 10)] (con integer 20)]])
      [[helper_12 (con integer 10)] (con integer 20)]])
    (lam x_9 (lam y_10 [[(builtin addInteger) x_9] y_10]))])
--- result
(con integer 60)
--- logs
[]
