crates/nash-codegen/src/optimizer_tests/snapshots/nash_codegen__optimizer_tests__unused_params__middle.snap
---
source: crates/nash-codegen/src/optimizer_tests/unused_params.rs
expression: "crate::harness::pass_snapshot(b.arena, before,\nformat!(\"--- core before\\n{}\\n--- core early\\n{}\\n--- core after ANF\\n{}\\n--- uplc before\\n{}\\n--- uplc after\\n{}\\n--- result\\n{}\\n--- logs\\n{:?}\",\npretty(before), pretty(early), pretty(after), baseline.uplc, candidate.uplc,\ncandidate.result, candidate.logs))"
---
--- unoptimized Core
let helper#8 : int -> int -> int -> int = \x#5 : int y#6 : int z#7 : int -> addInteger x#5 z#7 in
addInteger (helper#8 10 20 30) (helper#8 10 20 30)
--- unoptimized UPLC
(program 1.1.0
  [(lam helper_8
    [[(builtin addInteger)
      [[[helper_8 (con integer 10)] (con integer 20)] (con integer 30)]]
      [[[helper_8 (con integer 10)] (con integer 20)] (con integer 30)]])
    (lam x_5 (lam y_6 (lam z_7 [[(builtin addInteger) x_5] z_7])))])
--- optimized Core
80
--- optimized UPLC
(program 1.1.0 (con integer 80))
--- isolated pass
--- core before
let helper#8 : int -> int -> int -> int = \x#5 : int y#6 : int z#7 : int -> addInteger x#5 z#7 in
addInteger (helper#8 10 20 30) (helper#8 10 20 30)
--- core early
let helper#8 : int -> int -> int = \x#5 : int z#7 : int -> addInteger x#5 z#7 in
addInteger (helper#8 10 30) (helper#8 10 30)
--- core after ANF
let helper#8 : int -> int -> int = \x#5 : int z#7 : int -> addInteger x#5 z#7 in
let anf#1 : int = helper#8 10 30 in
let anf#2 : int = helper#8 10 30 in
addInteger anf#1 anf#2
--- uplc before
(program 1.1.0
  [(lam helper_8
    [[(builtin addInteger)
      [[[helper_8 (con integer 10)] (con integer 20)] (con integer 30)]]
      [[[helper_8 (con integer 10)] (con integer 20)] (con integer 30)]])
    (lam x_5 (lam y_6 (lam z_7 [[(builtin addInteger) x_5] z_7])))])
--- uplc after
(program 1.1.0
  [(lam helper_8
    [(lam anf_1
      [(lam anf_2 [[(builtin addInteger) anf_1] anf_2])
        [[helper_8 (con integer 10)] (con integer 30)]])
      [[helper_8 (con integer 10)] (con integer 30)]])
    (lam x_5 (lam z_7 [[(builtin addInteger) x_5] z_7]))])
--- result
(con integer 80)
--- logs
[]
