crates/nash-codegen/src/optimizer_tests/snapshots/nash_codegen__optimizer_tests__unused_params__recursive_unchanged.snap
---
source: crates/nash-codegen/src/optimizer_tests/unused_params.rs
expression: "crate::harness::pass_snapshot(b.arena, before,\nformat!(\"--- core before\\n{}\\n--- core early\\n{}\\n--- core after ANF\\n{}\\n--- uplc before\\n{}\\n--- uplc after\\n{}\\n--- result\\n{}\\n--- logs\\n{:?}\",\npretty(before), pretty(early), pretty(after), baseline.uplc, candidate.uplc,\ncandidate.result, candidate.logs))"
---
--- unoptimized Core
letrec
  helper#3 : int -> int -> int [static []] = \unused#1 : int used#2 : int -> used#2
in
helper#3 0 42
--- unoptimized UPLC
(program 1.1.0
  [(lam helper_3 [[helper_3 (con integer 0)] (con integer 42)])
    [(lam self_4 [self_4 self_4]) (lam self_4 (lam unused_1 (lam used_2 used_2)))]])
--- optimized Core
letrec
  helper#4 : int -> int -> int [static []] = \unused#5 : int used#6 : int -> used#6
in
helper#4 0 42
--- optimized UPLC
(program 1.1.0
  [(lam helper_11 [[helper_11 (con integer 0)] (con integer 42)])
    [(lam self_7 [self_7 self_7]) (lam self_8 (lam unused_9 (lam used_10 used_10)))]])
--- isolated pass
--- core before
letrec
  helper#3 : int -> int -> int [static []] = \unused#1 : int used#2 : int -> used#2
in
helper#3 0 42
--- core early
letrec
  helper#3 : int -> int -> int [static []] = \unused#1 : int used#2 : int -> used#2
in
helper#3 0 42
--- core after ANF
letrec
  helper#3 : int -> int -> int [static []] = \unused#1 : int used#2 : int -> used#2
in
helper#3 0 42
--- uplc before
(program 1.1.0
  [(lam helper_3 [[helper_3 (con integer 0)] (con integer 42)])
    [(lam self_4 [self_4 self_4]) (lam self_4 (lam unused_1 (lam used_2 used_2)))]])
--- uplc after
(program 1.1.0
  [(lam helper_3 [[helper_3 (con integer 0)] (con integer 42)])
    [(lam self_7 [self_7 self_7]) (lam self_7 (lam unused_1 (lam used_2 used_2)))]])
--- result
(con integer 42)
--- logs
[]
